// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal Component should render a terminal component 1`] = `
<div
  className="terminal-base sc-bdVaJa krmIoX"
>
  <div
    className="sc-bwzfXH dLBnSZ"
    style={Object {}}
  >
    <div
      className="sc-bxivhb hdqhPL"
      style={Object {}}
    >
      <svg
        height="20"
        width="100"
      >
        <circle
          cx="24"
          cy="14"
          fill="red"
          onClick={[Function]}
          r="5"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="44"
          cy="14"
          fill="orange"
          onClick={[Function]}
          r="5"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
        <circle
          cx="64"
          cy="14"
          fill="green"
          onClick={[Function]}
          r="5"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        />
      </svg>
    </div>
    <div
      className="sc-jTzLTM lfnIny"
      style={Object {}}
    >
      <div
        className="sc-cSHVUG jgYAxu"
        onClick={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        title="bash"
      >
        bash
      </div>
      <div
        className="sc-fjdhpX ghCJNo"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="sc-kAzzGY hjGnyC"
          onClick={[Function]}
        >
          +
        </div>
      </div>
    </div>
    <div
      className="sc-EHOje ezjTKM"
      onKeyUp={[Function]}
      style={
        Object {
          "overflowY": "auto",
        }
      }
      tabIndex="0"
    >
      <div
        className="sc-gZMcBi cwkXTh"
      >
        <div
          className="sc-gqjmRU gAcuTz"
        >
          <div
            className="sc-VigVT bYwkqd"
          >
            <pre
              className="sc-gzVnrw iGGAfs"
            >
              Hello World. My name is Nitin Tulswani
            </pre>
            <div
              className="sc-htoDjs iQSzyY"
            >
              <span
                className="sc-dnqmqq dNrvp"
              >
                &gt;
              </span>
              <input
                className="sc-iwsKbI jBOpwP"
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                tabIndex="-1"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Terminal Component should work with plugins 1`] = `
<div
  className="terminal-base"
  style={Object {}}
>
  <div
    className="terminal-container-wrapper"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <div
      className="terminal-top-bar adjust-bar"
      style={
        Object {
          "backgroundColor": "black",
        }
      }
    >
      <svg
        height="20"
        width="100"
      >
        <circle
          cx="24"
          cy="14"
          fill="red"
          onClick={[Function]}
          r="5"
        />
        <circle
          cx="44"
          cy="14"
          fill="orange"
          onClick={[Function]}
          r="5"
        />
        <circle
          cx="64"
          cy="14"
          fill="green"
          onClick={[Function]}
          r="5"
        />
      </svg>
    </div>
    <div
      className="terminal-container terminal-container-main"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "black",
        }
      }
    >
      <div
        className="terminal-holder"
      >
        <div
          className="terminal-content"
        >
          <div
            className="terminal-input-area"
          >
            <div
              className="terminal-output-line"
            >
               
            </div>
            <div
              className="terminal-input"
            >
              <span
                className="terminal-prompt"
                style={
                  Object {
                    "color": "green",
                  }
                }
              >
                /home/user/ &gt;
              </span>
              <input
                className="terminal-main-input"
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "black",
                    "color": "green",
                  }
                }
                tabIndex="-1"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
